k8s/ci-rbac.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ci-deploy
